Mon Aug 19 18:13:32 1996  Ian Lance Taylor  <ian@cygnus.com>

	* rcs.c (linevector_init): Make inline.  Set lines_alloced to 0,
	not 10.  Set vector to NULL.
	(linevector_add): Remove assertion that lines_alloced is greater
	than zero.  Initialize lines_alloced if necessary.
	(linevector_copy): Initialize lines_alloced if necessary.
	(linevector_free): Only free vector if it is not NULL.
	(RCS_deltas): Always call linevector_init and linevector_free on
	curlines, headlines, and trunklines.
 	(RCS_fast_checkout): Remove #if 0 around code that calls
	RCS_deltas.

Fri Aug 16 17:52:54 1996  Ian Lance Taylor  <ian@cygnus.com>

	* rcs.c (linevector_add): Handle zero length correctly.
	(RCS_deltas): In RCS_FETCH case, the data is in headlines, not
	curlines.
	(RCS_fast_checkout): Update comment about RCS_deltas: the
	testsuite now passes.

	* rcs.c (RCS_fully_parse): Use the length of the value, rather
	than assuming that there are no embedded zero bytes.
	(struct line): Add len field.
	(linevector_add): Add len parameter.  Change all callers.  Use
	len, rather than assuming that there are no embedded zero bytes.
	Set the len field in new lines.
	(RCS_deltas): Use the length of the value, rather than assuming
	that there are no embedded zero bytes.  Use the line length when
	outputting it and when copying it.
	(RCS_fast_checkout): Update comment about RCS_deltas to remove
	note about supporting zero bytes correctly.

Thu Aug 15 23:38:48 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* commit.c, import.c: Revise comments regarding the fact that we
	call start_server before do_editor.

Thu Aug 15 11:30:55 1996  Ian Lance Taylor  <ian@cygnus.com>

	* server.c: Include <sys/socket.h> if AUTH_SERVER_SUPPORT.
	(pserver_authenticate_connection): Set SO_KEEPALIVE on
	STDIN_FILENO.
	(kserver_authenticate_connection): Likewise.

Thu Aug 15 10:26:41 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* server.c (switch_to_user): Fix previous patch to compile it for